filter user tables by classification (need fix)

--- a/views/administrator/user.hbs
+++ b/views/administrator/user.hbs
@@ -37,21 +37,21 @@
         <select name="plantClassification">
             <option disabled selected value="null_value">select your plant classification</option>
             <option value="na">N/A</option>
-            <option value="first">1st Class</option>
-            <option value="second">2nd Class</option>
-            <option value="third">3rd Class</option>
-            <option value="fourth">4th Class</option>  
-            <option value="fifth">5th Class</option>
-            <option value="rpo">RPO</option>
+            <option value="1st Class">1st Class</option>
+            <option value="2nd Class">2nd Class</option>
+            <option value="3rd Class">3rd Class</option>
+            <option value="4th Class">4th Class</option>  
+            <option value="5th Class">5th Class</option>
+            <option value="RPO">RPO</option>
         </select>
 
         <p><label for="fieldPosition"><b>Field Position</b></label></p>
         <select name="fieldPosition">
             <option disabled selected value="null_value">select your position</option>
-            <option value="na">N/A</option>
-            <option value="chiefEngineer">Chief Engineer</option>
-            <option value="shiftEngineer">Shift Engineer</option>
-            <option value="operator">Operator</option>
+            <option value="N/A">N/A</option>
+            <option value="Chief Engineer">Chief Engineer</option>
+            <option value="Shift Engineer">Shift Engineer</option>
+            <option value="Operator">Operator</option>
         </select>
 
         <p><label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Business Phone Number</b> (format: 123-456-7890)</label></p>
