--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -9,7 +9,8 @@
 <body>
     {{> admin_menu}}
     
-    <div class="maincontent">      {{!-- without this class, content and side nav bar will overlap --}}
+    {{!-- without this class, content and side nav bar will overlap --}}
+    <div class="maincontent">
         {{> menu}}
 
     {{!-- Create New Event Form Popup --}}
