Forgot password page added

--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" type="text/css" href="/css/login_style.css" />
-    {{> head}}
-</head>
+{{> head}}
 
 <body>
     {{> menu}}
 
+    <form>
+        <h1>Forgot your password?</h1>
+        <p>Enter your email to receive a reset link.</p>
+
+        <br>
+
+        <div class="child-div">
+          <label for="email">Email Address</label>
+            <input id="email" name="email" type="text" required />
+
+            <br>
+
+            <p><input type="submit"></p>
+
+        </div>
+
+    </form>
+
+
 </body>
+{{> footer}}
 
 </html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/static/js/forgotpassword.js"></script>
