--- a/views/login.hbs
+++ b/views/login.hbs
@@ -27,11 +27,11 @@
                     {{!-- <input type="submit" value="Log in" /> --}}
                 </div>
 
-               
+                 
             </form><!-- form -->
 
-            <form method="POST" action="/forgotpassword"
-             <input type="submit" class="form_button" value="Forgot Password?" id="forgot_password_button" />
+            <form method="GET" action="/forgotpassword">
+             <button> Forgot Password? </button>
              <br><br>
              </form>
 
