Update adminaccount + useraccount and edit event page layout

--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -16,7 +16,7 @@
     <div>
         <h1>
             <span>{{heading}}</span>
-            <button class="add_event_button" type="button" data-toggle="modal" data-target="#createEventForm">Add New Event</button>
+            <button style="margin-right: 2%;" class="add_event_button" type="button" data-toggle="modal" data-target="#createEventForm">Add New Event</button>
         </h1>
     </div>
     <div class="modal fade" id="createEventForm" tabindex="-1" role="dialog" aria-labelledby="createEventFormLabel" aria-hidden="true">
@@ -62,7 +62,7 @@
             </tr>
 
             {{#each event}}
-            <tr>
+            <tr class="event_tr">
                 <td class="event_text"><a class="event_link" href="/admin/events/{{event_uuid}}">{{eventName}}</a></td>
                 <td class="event_text"><a class="event_link" href="/admin/events/{{event_uuid}}">{{eventDescription}}</a></td>
                 <td class="event_text"><a class="event_link" href="/admin/events/{{event_uuid}}">{{eventDate}}</a></td>
