--- a/views/administrator/webcontent/about.hbs
+++ b/views/administrator/webcontent/about.hbs
@@ -15,7 +15,7 @@
 
         <h1>{{heading}}</h1>
         <br><br>
-        <h2>Change Event Page</h2>
+        <h2 style="margin-left: 2%;">Change Event Page</h2>
         <table>
         <td class="admin_about_table">
         <form method="POST" action="/updateAbout">
@@ -58,8 +58,8 @@
 
         <br><br>
 
-        <h3 id="gmapsInstructions">Google Maps</h3>
-        To display event locations, we use google maps. You will have to follow these instructions to change the location.
+        <h3 style="margin-left: 2%;" id="gmapsInstructions">Google Maps</h3>
+        <p style="margin-left: 2%;">To display event locations, we use google maps. You will have to follow these instructions to change the location.</p>
 
         <ol>
             <li>Visit <a href="https://maps.google.com">Google Maps</a></li>
