--- a/views/partials/admin_menu.hbs
+++ b/views/partials/admin_menu.hbs
@@ -15,6 +15,6 @@
     </div>
 </div>
 
-{{event_isActive}}
+<p style="display: none;">{{event_isActive}}</p>
 
 <script type="text/javascript" src="/js/admin/navbar.js"></script>
