--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,10 +160,11 @@ form {
 
 footer {
     background-color: black;
-    position: relative;
+    position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
+    margin-bottom: -130%;
 }
 
 
