--- a/views/administrator/event.hbs
+++ b/views/administrator/event.hbs
@@ -13,11 +13,9 @@
 
     {{> menu}}
     
-    <h1>{{heading}}</h1>
+    <h1>Event Details</h1>
 
-    <br>
-
-    <button type="button" data-toggle="modal" data-target="#editEventForm">Edit Event</button>
+    {{!-- <button type="button" data-toggle="modal" data-target="#editEventForm">Edit Event</button> --}}
     <div class="modal fade" id="editEventForm" tabindex="-1" role="dialog" aria-labelledby="editEventFormLabel" aria-hidden="true">
         <form method="post" action="/editEvent" id="editevent_form">
             <div id="editEvent" class="modal-dialog" role="document">
@@ -53,59 +51,71 @@
 
     <br>
 
-    <h3>Event Description</h3>
-    <p>{{date}}</p>
-    <p>{{desc}}</p>
+    <h3>
+        <span style="margin-left: 2%;">Event name: {{heading}}</span>
+        <button class="edit_single_event_button" type="button" data-toggle="modal" data-target="#editEventForm">Edit Event</button>
+    </h3>
+    <h5 class="single_event_text">Date: {{date}}</h5>
+    <h5 class="single_event_text">Event Description:</h5>
+    <div class="event_desc_box">
+        <h5>{{desc}}</h5>
+    </div>
     
-    <h3>Attendees</h3>
-    <p>Number of attendees: {{countAttendees}}</p>
-    <p></p><button type="button" data-toggle="modal" data-target="#addAttendeeForm">Add Attendee</button></p>
-    <div class="modal fade" id="addAttendeeForm" tabindex="-1" role="dialog" aria-labelledby="addAttendeeFormLabel" aria-hidden="true">
-        <form method="post" action="/addAttendee">
-            <input type="hidden" name="event_uuid" value={{event_uuid}}>
-            <div id="addAttendee" class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header text-center">
-                        <h4 class="modal-title w-100 font-weight-bold">Add Attendee</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label data-error="wrong" data-success="right" for="addAttendeeForm-description">Attendee's Email</label>
-                            <input type="email" class="form-control" rows="3" name="email"></textarea>
+    <br><br>
+    <div class="attendees_list">
+        <h3>Attendees List:</h3>
+        <h6 class="single_event_text">Number of attendees: {{countAttendees}}</h6>
+        {{!-- <button type="button" data-toggle="modal" data-target="#addAttendeeForm">Add Attendee</button></p> --}}
+        <div class="modal fade" id="addAttendeeForm" tabindex="-1" role="dialog" aria-labelledby="addAttendeeFormLabel"
+            aria-hidden="true">
+            <form method="post" action="/addAttendee">
+                <input type="hidden" name="event_uuid" value={{event_uuid}}>
+                <div id="addAttendee" class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header text-center">
+                            <h4 class="modal-title w-100 font-weight-bold">Add Attendee</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label data-error="wrong" data-success="right" for="addAttendeeForm-description">Attendee's
+                                    Email</label>
+                                <input type="email" class="form-control" rows="3" name="email"></textarea>
+                            </div>
+                        </div>
+                        <div class="modal-footer d-flex justify-content-center">
+                            <button class="btn btn-deep-orange">Add</button>
                         </div>
                     </div>
-                    <div class="modal-footer d-flex justify-content-center">
-                        <button class="btn btn-deep-orange">Add</button>
-                    </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
+        <table class="filetable table-responsive">
+            <tr>
+                <th style="width: 30%;">Name</th>
+                <th style="width: 30%;">Email</th>
+                <th style="width: 30%;">Company</th>
+                <th><button style="width: 100%;" class="btn btn-outline-success" type="button" data-toggle="modal"
+                        data-target="#addAttendeeForm">Add Attendee</button></th>
+            </tr>
+            {{#each eventAttendees}}
+            <tr>
+                <td>{{firstName}} {{lastName}}</td>
+                <td>{{email}}</td>
+                <td>{{companyName}}</td>
+                <td>
+                    <form method="post" action="/deleteAttendee">
+                        <input type="hidden" name="accountID" value={{account_uuid}}>
+                        <input type="hidden" name="event_uuid" value={{../event_uuid}}>
+                        <input style="width: 100%;" class="btn btn-outline-danger" type="submit" value="Delete">
+                    </form>
+                </td>
+            </tr>
+            {{/each}}
+        </table>
     </div>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Company</th>
-            <th></th>
-        </tr>
-        {{#each eventAttendees}}
-        <tr>
-            <td>{{firstName}} {{lastName}}</td>
-            <td>{{email}}</td>
-            <td>{{companyName}}</td>
-            <td>
-                <form method="post" action="/deleteAttendee">
-                    <input type="hidden" name="accountID" value={{account_uuid}}>
-                    <input type="hidden" name="event_uuid" value={{../event_uuid}}>
-                    <input type="submit" value="Delete">
-                </form>
-            </td>
-        </tr>
-        {{/each}}
-    </table>
 </body>
 </div>
 {{> footer}}
