--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -21,6 +21,7 @@
                 </div>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/calendar">Calendar</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact</a>
