--- a/views/administrator/events.hbs
+++ b/views/administrator/events.hbs
@@ -55,11 +55,11 @@
     <div class="jumbotron no_background_colour">
         <table class="event_table">
             <tr>
-                <th class="event_text">Event Name</th>
-                <th class="event_text">Event Description</th>
-                <th class="event_text">Date</th>
-                <th class="event_text"></th>
-                <th class="event_text"></th>
+                <th class="event_text" style="width: 10%">Event Name</th>
+                <th class="event_text" style="width: 50%;">Event Description</th>
+                <th class="event_text" style="width: 100px;">Date</th>
+                <th class="event_text" style="width: 60px;"></th>
+                <th class="event_text" style="width: 60px;"></th>
             </tr>
 
             {{#each event}}
