--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -45,13 +45,13 @@
                 {{#each users}}
 
                 <tr class="user_acount_table" style="background-color: white;">
-                    <td style="width: 40%;"><a style="color: black;" href="/admin/useraccounts/{{account_uuid}}">{{lastName}}, {{firstName}}</td></a>
-                    <td style="width: 40%;">{{email}}</td>
-                    <td>{{companyName}}</td>
-                    <td>{{Division}}</td>
-                    <td class="plantClassification">{{plantClassification}}</td>
-                    <td>{{fieldPosition}}</td>
-                    <td>{{businessPhone}}</td>
+                    <td style="width: 15%;"><a style="color: black;" href="/admin/useraccounts/{{account_uuid}}">{{lastName}}, {{firstName}}</td></a>
+                    <td style="width: 15%;">{{email}}</td>
+                    <td style="width: 13%;">{{companyName}}</td>
+                    <td style="width: 10%">{{division}}</td>
+                    <td style="width: 10%;" class="plantClassification">{{plantClassification}}</td>
+                    <td style="wdith: 15%;">{{fieldPosition}}</td>
+                    <td style="min-width: 50px;">{{businessPhone}}</td>
                  
                     <td style="width: 10%;"><a href="/admin/useraccounts/{{account_uuid}}"><button class="btn btn-outline-primary user_account_button">Edit user</button></a></td>
 
