--- a/views/administrator/webcontent/speaker.hbs
+++ b/views/administrator/webcontent/speaker.hbs
@@ -14,6 +14,54 @@
     
         <h1>{{heading}}</h1>
 
+        <button class="btn btn-outline-success" data-toggle="modal" data-target="#newSpeakerForm">New Speaker</button>
+        <div class="modal fade" id="newSpeakerForm{{speaker_id}}" tabindex="-1" role="dialog"
+            aria-labelledby="newSpeakerFormLabel" aria-hidden="true">
+            <form method="post" action="/addSpeaker" id="newspeaker_form">
+                <div id="newSpeaker" class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header text-center">
+                            <h4 class="modal-title w-100 font-weight-bold">New Speaker</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+        
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label data-error="wrong" data-success="right" for="newSpeakerForm-fname">First Name</label>
+                                <input type="text" class="form-control validate" name="fname" required>
+                            </div>
+                            <div class="form-group">
+                                <label data-error="wrong" data-success="right" for="newSpeakerForm-lname">Last Name</label>
+                                <input type="text" class="form-control validate" name="lname" required>
+                            </div>
+                            <div class="form-group">
+                                <label data-error="wrong" data-success="right" for="newSpeakerForm-topic">Topic</label>
+                                <input type="text" class="form-control validate" name="topic" required>
+                            </div>
+                            <div class="form-group">
+                                <label data-error="wrong" data-success="right" for="newSpeakerForm-location">Location</label>
+                                <input type="text" class="form-control validate" name="location" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="speakerTime">Time</label>
+                                <input type="time" class="form-control half_width" name="time" required>
+                            </div>
+                            <div class="form-group">
+                                <label data-error="wrong" data-success="right" for="newSpeakerForm-bio">Biography</label>
+                                <textarea class="form-control" rows="3" name="biography" required></textarea>
+                            </div>
+                        </div>
+                        <div class="modal-footer d-flex justify-content-center">
+                            <button class="btn btn-deep-orange">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+
         <table class="filetable table-responsive">
             <tr>
                 <th>Last Name</th>
@@ -34,8 +82,7 @@
                     <td>{{location}}</td>
                     <td>{{biography_short}}</td>
                     <td>
-                        <button class="btn btn-outline-primary" type="button" data-toggle="modal"
-                            data-target="#editSpeakerForm{{speaker_id}}">Edit</button>
+                        <button class="btn btn-outline-primary" type="button" data-toggle="modal" data-target="#editSpeakerForm{{speaker_id}}">Edit</button>
                         <div class="modal fade" id="editSpeakerForm{{speaker_id}}" tabindex="-1" role="dialog"
                             aria-labelledby="editSpeakerFormLabel" aria-hidden="true">
                             <form method="post" action="/editSpeaker" id="editspeaker_form">
@@ -110,7 +157,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                        <form method="post" action="/deleteEvent" class="no_margin">
+                                        <form method="post" action="/deleteSpeaker" class="no_margin">
                                             <input type="hidden" name="speaker_uuid" value="{{speaker_id}}">
                                             <button type="submit" class="btn btn-outline-danger">Delete</button>
                                         </form>
