register checks for matching pw; "N/A" to "Other"

--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -20,7 +20,7 @@
             <div class="collapse" id="userFilters">
                 <p>Plant Classifications</p>
                 <input type="radio" style="margin-left: 15px;" id="all" name="plantClassification">Show All
-                <input type="radio" style="margin-left: 15px;" id="N/A" name="plantClassification">N/A
+                <input type="radio" style="margin-left: 15px;" id="Other" name="plantClassification">Other
                 <input type="radio" style="margin-left: 15px;" id="1st Class" name="plantClassification">1st Class
                 <input type="radio" style="margin-left: 15px;" id="2nd Class" name="plantClassification">2nd Class
                 <input type="radio" style="margin-left: 15px;" id="3rd Class" name="plantClassification">3rd Class
