--- a/views/administrator/user.hbs
+++ b/views/administrator/user.hbs
@@ -33,7 +33,7 @@
         <p><b>Plant Classification</b></p>
         <select name="plantClassification">
             <option disabled selected value="null_value">select your plant classification</option>
-            <option value="na">N/A</option>
+            <option value="Other">Other</option>
             <option value="1st Class">1st Class</option>
             <option value="2nd Class">2nd Class</option>
             <option value="3rd Class">3rd Class</option>
@@ -45,7 +45,7 @@
         <p><label for="fieldPosition"><b>Field Position</b></label></p>
         <select name="fieldPosition">
             <option disabled selected value="null_value">select your position</option>
-            <option value="N/A">N/A</option>
+            <option value="Other">Other</option>
             <option value="Chief Engineer">Chief Engineer</option>
             <option value="Shift Engineer">Shift Engineer</option>
             <option value="Operator">Operator</option>
@@ -96,10 +96,6 @@
         <input type="text" name="pc_zip" value="{{user.pc_zip}}" placeholder="{{user.pc_zip}}">
 
         <input type="hidden" name="account_uuid" value="{{user.account_uuid}}">
-
-        <br><br>
-
-        <input type="checkbox" name="consent" value="consent"> I consent to distribution of my contact information for networking purposes
 
         <br><br>
 
