--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -26,7 +26,7 @@
                 <p><b>Plant Classification</b></p>
                 <select name="plantClassification">
                     <option disabled selected value="null_value">select your plant classification</option>
-                    <option value="na">N/A</option>
+                    <option value="Other">Other</option>
                     <option value="1st Class">1st Class</option>
                     <option value="2nd Class">2nd Class</option>
                     <option value="3rd Class">3rd Class</option>
@@ -38,7 +38,7 @@
                 <p><label for="fieldPosition"><b>Field Position</b></label></p>
                 <select name="fieldPosition">
                     <option disabled selected value="null_value">select your position</option>
-                    <option value="N/A">N/A</option>
+                    <option value="Other">Other</option>
                     <option value="Chief Engineer">Chief Engineer</option>
                     <option value="Shift Engineer">Shift Engineer</option>
                     <option value="Operator">Operator</option>
@@ -99,6 +99,9 @@
     <p>Please login to see this page.</p>
     {{/if}}
     </div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="/static/js/registration.js"></script>
 </body>
 
 {{> footer}}
