admin can add users; changed uuidv1 to v4

--- a/public/css/admin_style.css
+++ b/public/css/admin_style.css
@@ -315,6 +315,10 @@ a.sidenav_panel {
     margin-right: 2%;
 }
 
+.collapseButton, .addNewUserBotton {
+    display: inline;
+}
+
 .user_acount_table{
     border: 0.05cm solid grey;
 }
