--- a/views/administrator/useraccounts.hbs
+++ b/views/administrator/useraccounts.hbs
@@ -15,7 +15,8 @@
         <h1>{{heading}}</h1>
         <br><br>
         <div class="user-account-jumbotron">
-            <p><button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#userFilters" aria-expanded="false" aria-controls="collapseExample">Show Filter</button></p>
+            <button class="collapseButton btn btn-primary" type="button" data-toggle="collapse" data-target="#userFilters" aria-expanded="false" aria-controls="collapseExample">Show Filter</button>
+            <a href="/admin/adduser"/><button class="addNewUserButton btn btn-success" type="button">Add New User</button></a>
             <br>
             <div class="collapse" id="userFilters">
                 <p>Plant Classifications</p>
