Working on reset password

--- a/views/forgotpassword.hbs
+++ b/views/forgotpassword.hbs
@@ -6,22 +6,34 @@
     {{> menu}}
 
     <form>
+
         <h1>Forgot your password?</h1>
+        <br>
         <p>Enter your email to receive a reset link.</p>
 
-        <br>
-
-        <div class="child-div">
-          <label for="email">Email Address</label>
-            <input id="email" name="email" type="text" required />
+        <div class="contact-container">
 
             <br>
 
-            <p><input type="submit"></p>
+            <div class="child-div">
+                
+                <br>
 
-        </div>
+                <label for="email">Email Address</label>
+                <input id="email" name="email" type="text" required />
+
+                <br><br>
+
+                <p><input type="submit"></p>
+                
+                <br><br>
+
+
+            </div>
+        
 
     </form>
+    </div>
 
 
 </body>
