--- a/views/resetpassword.hbs
+++ b/views/resetpassword.hbs
@@ -6,16 +6,16 @@
     {{> menu}}
 
 
-<form method="POST">
+<form method="POST" action="?">
   <legend>Reset Password</legend>
   <div class="form-group">
     <label for="password">New Password</label>
-    <input class="form-control" type="password" name="password" value="" placeholder="New password" autofocus="autofocus"/>
+    <input class="form-control" type="password" name="password" required value="" placeholder="New password" autofocus="autofocus"/>
   </div>
-  <div class="form-group">
+  {{!-- <div class="form-group">
     <label for="confirm">Confirm Password</label>
-    <input class="form-control" type="password" name="confirm" value="" placeholder="Confirm password"/>
-  </div>
+    <input class="form-control" type="password" name="confirm" required value="" placeholder="Confirm password"/>
+  </div> --}}
   <div class="form-group">
     <button class="btn btn-primary" type="submit">Update Password</button>
   </div>
@@ -27,4 +27,4 @@
 </html>
 
 {{!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> --}}
-<script src="/static/js/forgotpassword.js"></script>
+{{!-- <script src="/static/js/forgotpassword.js"></script> --}}
