Update edit profile page, admin_about

--- a/views/administrator/adminaccount.hbs
+++ b/views/administrator/adminaccount.hbs
@@ -13,11 +13,14 @@
         {{> menu}}
 
         <h1>{{heading}}</h1>
+
         <br><br>
+
         <div class="admin-account-jumbotron">
+            
         <h3>Admin Accounts</h3>
         <table class="adminTable table-responsive filetable">
-            <tr>
+            <tr class="user_acount_table" style="background-color: white;">
                 <th>Name</th>
                 <th>Email</th>
                 <th>Administrator Status</th>
@@ -44,7 +47,7 @@
         <div class="non-admin-account-jumbotron">
         <h3 style="color: ">Non-Admin Accounts</h3>
         <table class="adminTable table-responsive filetable">
-            <tr>
+            <tr class="user_acount_table" style="background-color: white;">
                 <th>Name</th>
                 <th>Email</th>
                 <th></th>
