--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,11 +160,10 @@ form {
 
 footer {
     background-color: black;
-    position: absolute;
+    position: relative;
     left: 0;
-    bottom: 0;
+    bottom: -20px;
     width: 100%;
-    margin-bottom: -130%;
 }
 
 
@@ -266,7 +265,7 @@ p {
     grid-template-columns: 30%;
     grid-template-rows: auto;
     position: relative;
-    padding: 20px;
+    /* padding: 20px; */
 }
 
 .images {
@@ -322,3 +321,28 @@ p {
     }
 }
 
+label {
+    margin-bottom: 1rem !important;
+}
+
+@media screen and (max-width: 1400px) {
+    footer {
+        background-color: black;
+        position: sticky;
+        left: 24%;
+        bottom: -20px;
+        width: 100%;
+        z-index: 1;
+    }
+
+}
+
+
+@media screen and (max-width: 1400px) {
+    .footer-img {
+        float: left;
+        width: 0;
+        height: 25%;
+        margin-right: 15px;
+    }
+}
