--- a/views/administrator/webcontent/about.hbs
+++ b/views/administrator/webcontent/about.hbs
@@ -19,14 +19,32 @@
         <table>
         <td class="admin_about_table">
         <form method="POST" action="/updateAbout">
+
+            <div class="form-group" style="float: right;">
+                <label for="aboutDesc">Event Description</label>
+                <textarea class="form-control half_width" id="aboutDesc" rows="5" name="about_desc"
+                    required>{{details.description}}</textarea>
+            </div>
+
             <div class="form-group">
                 <label for="aboutTitle">Event Title</label>
                 <input class="form-control quarter_width" type="text" value="{{details.title}}" id="aboutTitle" name="aboutTitle" required>
             </div>
 
+
             <div class="form-group">
                 <label for="aboutDate">Event Date</label>
                 <input class="form-control quarter_width" type="date" value="{{details.date}}" id="aboutDate" name="aboutDate" required>
+            </div>
+
+            <div class="form-group" style="float: right;">
+                <label for="aboutGmaps">Google Maps HTML</label>
+                <textarea class="form-control half_width" id="aboutGmaps" name="aboutGmaps" rows="5"></textarea>
+                <small id="gmapsHelpBlock" class="form-text text-muted">
+                    If you're unsure of what to put in here, follow these <a href="#gmapsInstructions">instructions</a>
+                </small>
+                <br>
+                <button style="float: right;" type="submit" class="btn btn-primary">Change</button>
             </div>
 
             <div class="form-group">
@@ -38,20 +56,8 @@
                 <label for="aboutTime">Event End Time</label>
                 <input type="time" class="form-control quarter_width" name="about_hr2" value="{{details.endTime}}" required>
             </div>
-
-            <div class="form-group">
-                <label for="aboutDesc">Event Description</label>
-                <textarea class="form-control half_width" id="aboutDesc" rows="5" name="about_desc" required>{{details.description}}</textarea>
-            </div>
             
-            <div class="form-group">
-                <label for="aboutGmaps">Google Maps HTML</label>
-                <textarea class="form-control half_width" id="aboutGmaps" name="aboutGmaps" rows="5"></textarea>
-                <small id="gmapsHelpBlock" class="form-text text-muted">
-                    If you're unsure of what to put in here, follow these <a href="#gmapsInstructions">instructions</a>
-                </small>
-            </div>
-            <button type="submit" class="btn btn-primary">Change</button>
+            {{!-- <button type="submit" class="btn btn-primary">Change</button> --}}
         </form>
         </td>
         </table>
