--- a/views/agenda.hbs
+++ b/views/agenda.hbs
@@ -4,14 +4,16 @@
 <body>
     {{> menu}}
     <div class="container">
-    <p>8:00am-8:30am Registration</p>
-    <p>8:30am-9:30am Introductions and Agenda</p>
-    <p>9:30am-10:30am Speaker 1</p>
-    <p>10:30am-10:40am Break and Refreshments</p>
-    <p>10:40am-11:40am Speaker 2</p>
-    <p>11:40am-1:00pm Lunch</p>
-    <p>1:00pm-2:00pm Speaker 3</p>
-    <p>2:00pm-4:00pm Networking</p>
+        <div class="grid-container">
+            <p>8:00am-8:30am Registration</p>
+            <p>8:30am-9:30am Introductions and Agenda</p>
+            <p>9:30am-10:30am Speaker 1</p>
+            <p>10:30am-10:40am Break and Refreshments</p>
+            <p>10:40am-11:40am Speaker 2</p>
+            <p>11:40am-1:00pm Lunch</p>
+            <p>1:00pm-2:00pm Speaker 3</p>
+            <p>2:00pm-4:00pm Networking</p>
+        </div>
     </div>
 </body>
 {{> footer}}
