--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -18,14 +18,14 @@
                 <br>
         
                 <div class="child-div">
-                    <label for="email">Email Address</label>
+                    <label for="email">Email Address:</label>
                     <input id="email" name="email" type="text" required />
                 </div>
         
                 <br>
         
                 <div class="child-div">
-                    <label for="subject">Subject</label>
+                    <label for="subject">Subject:</label>
                     <input id="subject" name="subject" type="text" required />
                 </div>
         
@@ -33,7 +33,7 @@
                     <input id="phone number" name="phone number" type="text" /> --}}
         
         
-                <br><br>
+                <br>
         
                 {{!-- <label for="issue">What is your issue?</label>
                     <select id="issue" name="issue">
@@ -44,7 +44,7 @@
         
                 <div class="child-div">
         
-                    <label for="text">Type your inquiry</label>
+                    <label for="text">Type your inquiry:</label>
                     <textarea id="text" name="text" rows="5" cols="70" required></textarea>
         
                     <br>
