--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -11,7 +11,7 @@
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item dropdown">
+            {{!-- <li class="nav-item dropdown">
                 <div class="dropdown">
                     <a class="nav-link" href="/about">About</a>
                     <div class="dropdown-content">
@@ -19,6 +19,16 @@
                         <a class="nav-link" href="/speaker">Speakers</a>
                     </div>
                 </div>
+            </li> --}}
+            <li class="nav-item">
+                <a class="nav-link" href="/about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/agenda">Agenda</a>
+
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/speaker">Speakers</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/calendar">Calendar</a>
