--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -11,64 +11,92 @@
             <p><i>Please fill in the following fields.</i></p>
             <p><i>A * denotes required information.</i></p>
 
-            <p><label for="email"><b>Email Address *</b></label></p>
-            <input type="email" name="email" required>
+            <label for="password" style="margin-right: 5rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Password *</b></span>
+                <input type="password" name="password" id="password" minlength=6 required>
+            </label>
 
-            <p><label for="password"><b>Password *</b></label></p>
-            <input type="password" name="password" id="password" minlength=6 required>
+            <label for="confirmPassword">
+                <span style="display: block; margin: 0 0 3px;"><b>Confirm Password*</b></span>
+                <input type="password" name="confirmPassword" id="passwordConfirm" minlength=6 required>
+            </label>
+            <br>
+            <label for="title" style="margin-right: 5rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Title</b></span>
+                <input type="text" name="title">
+            </label>
 
-            <p><label for="confirmPassword"><b>Confirm Password*</b></label></p>
-            <input type="password" name="confirmPassword" id="passwordConfirm" minlength=6 required>
+            <label for="firstName" style="margin-right: 6.4rem">
+                <span style="display: block; margin: 0 0 3px;"><b>First Name *</b></span>
+                <input style="width: 197px;" type="text" name="firstName" required>
+            </label>
 
-            <p><label for="title"><b>Title</b></label></p>
-            <input type="text" name="title">
+            <label for="lastName">
+                <span style="display: block; margin: 0 0 3px;"><b>Last Name *</b></span>              
+                <input type="text" name="lastName" required>
+            </label>
+            <br>
+            <label for="companyName" style="margin-right: 5rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Company Name *</b></span>
+                <input type="text" name="companyName" required>
+            </label>
 
-            <p><label for="firstName"><b>First Name *</b></label></p>
-            <input type="text" name="firstName" required>
+            <label style="margin-right: 6.3rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Plant Classification</b></span>
+                <select name="plantClassification">
+                    <option disabled selected value="null_value">Select plant classification</option>
+                    <option value="Other">Other</option>
+                    <option value="1st Class">1st Class</option>
+                    <option value="2nd Class">2nd Class</option>
+                    <option value="3rd Class">3rd Class</option>
+                    <option value="4th Class">4th Class</option>  
+                    <option value="5th Class">5th Class</option>
+                    <option value="RPO">RPO</option>
+                </select>
+            </label>
 
-            <p><label for="lastName"><b>Last Name *</b></label></p>
-            <input type="text" name="lastName" required>
+            <label for="fieldPosition" style="margin-right: 5rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Field Position</b></span>
+                <select name="fieldPosition" style="width: 182px;">
+                    <option disabled selected value="null_value">Select position</option>
+                    <option value="Other">Other</option>
+                    <option value="Chief Engineer">Chief Engineer</option>
+                    <option value="Shift Engineer">Shift Engineer</option>
+                    <option value="Operator">Operator</option>
+                </select>
+            </label>
+            <br>
+            <label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" style="margin-right: 5rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Business Phone Number</b></span>
+                <input type="tel" name="businessPhone">
+            </label>
 
-            <p><label for="companyName"><b>Company Name *</b></label></p>
-            <input type="text" name="companyName" required>
+            <label for="homePhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" style="margin-right: 6.3rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Home phone Number</b></span>
+                <input style="width: 197px;" type="tel" name="homePhone">
+            </label>
 
-            <p><b>Plant Classification</b></p>
-            <select name="plantClassification">
-                <option disabled selected value="null_value">select your plant classification</option>
-                <option value="Other">Other</option>
-                <option value="1st Class">1st Class</option>
-                <option value="2nd Class">2nd Class</option>
-                <option value="3rd Class">3rd Class</option>
-                <option value="4th Class">4th Class</option>  
-                <option value="5th Class">5th Class</option>
-                <option value="RPO">RPO</option>
-            </select>
+            <label for="cellPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" style="margin-right: 6rem">
+                <span style="display: block; margin: 0 0 3px;"><b>Cellular Phone Number</b></span>
+                <input type="tel" name="cellPhone">
+            </label>
 
-            <p><label for="fieldPosition"><b>Field Position</b></label></p>
-            <select name="fieldPosition">
-                <option disabled selected value="null_value">select your position</option>
-                <option value="Other">Other</option>
-                <option value="Chief Engineer">Chief Engineer</option>
-                <option value="Shift Engineer">Shift Engineer</option>
-                <option value="Operator">Operator</option>
-            </select>
-
-            <p><label for="businessPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Business Phone Number</b> (format: 123-456-7890)</label></p>
-            <input type="tel" name="businessPhone">
-
-            <p><label for="homePhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Home phone Number</b> (format: 123-456-7890)</label></p>
-            <input type="tel" name="homePhone">
-
-            <p><label for="cellPhone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"><b>Cellular Phone Number</b> (format: 123-456-7890)</label></p>
-            <input type="tel" name="cellPhone">
-
-            <p><label for="address"><b>House Address</b></label></p>
-            <input type="text" name="addressL1" placeholder="Street and number">
-            <input type="text" name="addressL2" placeholder="Apartment, suite, unit, building, floor, etc.">
-
-            <p><label for="City"><b>City</b></label></p>
-            <input type="text" name="city">
-
+            <label for="email">
+                <span style="display: block; margin: 0 0 3px;"><b>Email Address *</b></span>
+                <input type="email" name="email" required>
+            </label>
+            <br>
+            <label for="address">
+                <span style="display: block; margin: 0 0 3px;"><b>House Address</b></span>
+                <input type="text" name="addressL1" placeholder="Street and number">
+                <input type="text" name="addressL2" placeholder="Apartment, suite, unit, building, floor, etc.">
+            </label>
+            <br>
+            <label for="City">
+                <span style="display: block; margin: 0 0 3px;"><b>City</b></span>
+                <input type="text" name="city">
+            </label>
+            <br>
             {{!-- <p><b>Country</b></p>
     <select name="country">
         <option disabled selected value="null_value">select your country</option>
@@ -94,23 +122,28 @@
         <option value="Nunavut">Nunavut</option>
     </select> --}}
 
-            <p><b>Country</b></p>
-            <select name="country" class="country">
-                <option disabled selected value="null_value">select your country</option>
-                <option value="Canada">Canada</option>
-                <option value="United_States">United States</option>
-            </select>
+            <label>
+                <span style="display: block; margin: 0 0 3px;"><b>Country</b></span>
+                <select name="country" class="country" style="width: 182px;">
+                    <option disabled selected value="null_value">Select country</option>
+                    <option value="Canada">Canada</option>
+                    <option value="United_States">United States</option>
+                </select>
+            </label>
             <br>
-            <p><b>Province/Territory</b></p>
-            <select name="provincestate" class="provincestate">
-                <option disabled selected value="null_value">select your province</option>
-                <option value="BC">British Columbia</option>
-                <option value="Ontario">Ontario</option>
-            </select>
+            <label>
+                <span style="display: block; margin: 0 0 3px;"><b>Province/Territory</b></span>
+                <select name="provincestate" class="provincestate" style="width: 182px;">
+                    <option disabled selected value="null_value">Select province</option>
+                    <option value="BC">British Columbia</option>
+                    <option value="Ontario">Ontario</option>
+                </select>
+            </label>
             <br/>
-
-            <p><label for="pc_zip"><b>Postal Code</b></label></p>
-            <input type="text" name="pc_zip">
+            <label for="pc_zip">
+                <span style="display: block; margin: 0 0 3px;"><b>Postal Code</b></span>
+                <input type="text" name="pc_zip">
+            </label>
 
             <br><br>
 
